// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should renders <DashboardLayout> correctly when started 1`] = `
<styled.div>
  <styled.header>
    <Styled(Logo) />
    <styled.div>
      <styled.div
        onClick={[Function]}
      >
        <IconPause
          size={18}
        />
        <P>
          stop
        </P>
      </styled.div>
    </styled.div>
  </styled.header>
  <styled.div>
    <styled.nav>
      <div>
        <Styled(Link)
          to="/ip"
        >
          ipConnection
        </Styled(Link)>
        <Styled(Link)
          to="/system"
        >
          systemManagement
        </Styled(Link)>
      </div>
      <div>
        <Styled(Styled(Link))
          onClick={[Function]}
        >
          <IconLogout
            size={18}
          />
          <P>
            signoutService
          </P>
        </Styled(Styled(Link))>
      </div>
    </styled.nav>
    <styled.main>
      Content
    </styled.main>
  </styled.div>
</styled.div>
`;

exports[`should renders <DashboardLayout> correctly when stopped 1`] = `
<styled.div>
  <styled.header>
    <Styled(Logo) />
    <styled.div>
      <styled.div
        onClick={[Function]}
      >
        <IconPlay
          size={18}
        />
        <P>
          start
        </P>
      </styled.div>
    </styled.div>
  </styled.header>
  <styled.div>
    <styled.nav>
      <div>
        <Styled(Link)
          to="/ip"
        >
          ipConnection
        </Styled(Link)>
        <Styled(Link)
          to="/system"
        >
          systemManagement
        </Styled(Link)>
      </div>
      <div>
        <Styled(Styled(Link))
          onClick={[Function]}
        >
          <IconLogout
            size={18}
          />
          <P>
            signoutService
          </P>
        </Styled(Styled(Link))>
      </div>
    </styled.nav>
    <styled.main>
      Content
    </styled.main>
  </styled.div>
</styled.div>
`;
